--- a/estilos.css
+++ b/estilos.css
@@ -19,8 +19,8 @@ h2{
     padding: 0 35px;     	
 	border-radius: 7px;
 	background-image: linear-gradient(125deg, #ff0000 0, #b958f4 16.67%, #8a48f4 33.33%, #3c3cf2 50%, #0035f0 66.67%, #0034ee 83.33%, #0034eb 100%);
+	border: #FFFFFF 2px solid;
 }	
-}
 
 #formulario .btn{
 	width: 100%;
